mac osx 10 working-ish
mac seems to redirct the config files but, it runs.